--- a/po/wesnoth-manpages/de.po
+++ b/po/wesnoth-manpages/de.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.8\n"
 "POT-Creation-Date: 2012-01-06 12:00+0100\n"
-"PO-Revision-Date: 2011-12-13 10:30+0100\n"
+"PO-Revision-Date: 2012-01-17 14:08+0100\n"
 "Last-Translator: Gerfried Fuchs <rhonda@deb.at>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de\n"
 "Language: \n"
@@ -129,22 +129,12 @@ msgstr ""
 
 #. type: TP
 #: ../../doc/man/wesnoth.6:49
-#, fuzzy, no-wrap
-#| msgid "B<-c, --campaign[[E<lt>difficultyE<gt>] E<lt>id_campaignE<gt> [E<lt>id_scenarioE<gt>]]>"
+#, no-wrap
 msgid "B<-c, --campaign \\ [E<lt>id_campaignE<gt>]>"
-msgstr "B<-c, --campaign[[E<lt>EinstufungE<gt>] E<lt>id_KampagneE<gt> [E<lt>id_SzenarioE<gt>]]>"
+msgstr "B<-c, --campaign \\ [E<lt>id_KampagneE<gt>]>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:54
-#, fuzzy
-#| msgid ""
-#| "goes directly to the campaign based on the parameters.  The difficulty is "
-#| "a number between 1 and current campaign's difficulties number.  The "
-#| "default difficulty is 1.  The scenario must be one of the campaign's "
-#| "child scenarios. The default scenario is campaign's first scenario.  "
-#| "B<Note: When using this switch please ensure that you specify the data "
-#| "directory path as the final argument> aswell, otherwise the game will "
-#| "take the campaign/scenario id as the data dir."
 msgid ""
 "goes directly to the campaign with id E<lt>id_campaignE<gt>. A selection "
 "menu will appear if no id was specified.  B<Note:> When using this switch "
@@ -152,21 +142,17 @@ msgid ""
 "aswell, otherwise the game will take the campaign/scenario id as the data "
 "dir."
 msgstr ""
-"Geht direkt zu der von den Parametern bestimmten Kampagne. Die Einstufung "
-"ist eine Nummer zwischen 1 und der Einstufungsnummer der aktuellen Kampagne. "
-"Die Standardeinstufung ist 1. Das Szenario muss eines der Unterszenarien der "
-"Kampagne sein. Das Standardszenario ist das erste Szenario der Kampagne. "
-"B<Anmerkung: Wenn dieser Schalter verwendet wird, stellen Sie sicher, dass "
-"der Pfad zum Datenverzeichnis als letztes Argument angegeben ist>, "
-"anderenfalls wird das Spiel die Kampagnen-/Szenario-ID als Datenverzeichnis "
-"verwenden."
+"Geht direkt zur Kampagne mit der ID E<lt>id_KampagneE<gt>. Ein Auswahlmenü "
+"wird angezeigt, falls keine ID angegeben wurde. B<Anmerkung>: Wenn dieser "
+"Schalter verwendet wird, stellen Sie sicher, dass ebenfalls der Pfad zum "
+"Datenverzeichnis als letztes Argument angegeben ist, anderenfalls wird das "
+"Spiel die Kampagnen-/Szenario-ID als Datenverzeichnis verwenden."
 
 #. type: TP
 #: ../../doc/man/wesnoth.6:54
-#, fuzzy, no-wrap
-#| msgid "B<--data-dir E<lt>directoryE<gt>>"
+#, no-wrap
 msgid "B<--campaign-difficulty E<lt>difficultyE<gt>>"
-msgstr "B<--data-dir E<lt>VerzeichnisE<gt>>"
+msgstr "B<--campaign-difficulty E<lt>EinstufungE<gt>>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:57
@@ -174,12 +160,14 @@ msgid ""
 "The difficulty of the specified campaign (1 to max). If none specified, the "
 "campaign difficulty selection widget will appear."
 msgstr ""
+"Die Einstufung der gewünschten Kampagne (1 bis Max). Falls nicht angegeben, "
+"wird ein Dialog zur Auswahl der Kampagnen-Einstufung angezeigt."
 
 #. type: TP
 #: ../../doc/man/wesnoth.6:57
 #, no-wrap
 msgid "B<--campaign-scenario E<lt>id_scenarioE<gt>>"
-msgstr ""
+msgstr "B<--campaign-scenario E<lt>id_ScenarioE<gt>>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:60
@@ -187,6 +175,8 @@ msgid ""
 "The id of the scenario from the specified campaign. The default is the first "
 "scenario."
 msgstr ""
+"Die ID des Szenarios der gewünschten Kampagne. Der Vorgabewert ist das erste "
+"Szenario."
 
 # type: TP
 #. type: TP
@@ -1897,45 +1887,3 @@ msgstr ""
 #: ../../doc/man/wesnothd.6:286
 msgid "B<wesnoth>(6)."
 msgstr "B<wesnoth>(6)."
-
-#~ msgid "B<--new-syntax>"
-#~ msgstr "B<--new-syntax>"
-
-#~ msgid "enables the new campaign syntax parsing."
-#~ msgstr "Aktiviert die neue Syntaxanalyse für Kampagnen."
-
-# type: TP
-#~ msgid "B<--smallgui>"
-#~ msgstr "B<--smallgui>"
-
-# type: Plain text
-#~ msgid ""
-#~ "allows to use screen resolutions down to 800x480 and resizes a few "
-#~ "interface elements."
-#~ msgstr ""
-#~ "Erlaubt es, Auflösungen bis zu minimal 800x480 zu verwenden und verändert "
-#~ "die Größe einiger Oberflächen-Elemente."
-
-# type: TH
-#~ msgid "2009"
-#~ msgstr "2009"
-
-# type: TP
-#~ msgid "B<-c, --campaign>"
-#~ msgstr "B<-c, --campaign>"
-
-# type: Plain text
-#~ msgid "goes directly to the campaign selection menu."
-#~ msgstr "Wechselt direkt ins Auswahmenü für Kampagnen."
-
-# type: Plain text
-#~ msgid "Dumps a list of all log domains and exits."
-#~ msgstr "Gibt eine Liste der Protokollbereiche aus und beendet das Programm."
-
-# type: Plain text
-#~ msgid "B<wesnoth_editor>(6), B<wesnothd>(6)"
-#~ msgstr "B<wesnoth_editor>(6), B<wesnothd>(6)"
-
-# type: Plain text
-#~ msgid "B<wesnoth>(6), B<wesnoth_editor>(6)"
-#~ msgstr "B<wesnoth>(6), B<wesnoth_editor>(6)"
